[package]
name = "al-api"
version = "0.1.0"
authors = ["baumannmatthieu0@gmail.com", "matthieu.baumann@astro.unistra.fr"]
edition = "2018"

[dependencies]
futures = "0.3.12"
js-sys = "0.3.47"
wasm-bindgen-futures = "0.4.20"
cgmath = "*"
image = "0.23.14"
lazy_static = "1.4.0"
serde = { version = "^1.0.59", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "0.2.70"
features = ["serde-serialize"]

[features]
webgl1 = [
  "web-sys/WebGlRenderingContext",
  "web-sys/AngleInstancedArrays",   # Enabling instancing features
  "web-sys/ExtSRgb",                # Enabling SRGB8_ALPHA8 internal format
  "web-sys/OesTextureFloat"
]
webgl2 = [
  "web-sys/WebGl2RenderingContext",
  "web-sys/WebGlVertexArrayObject",
  "web-sys/ExtColorBufferFloat",
]

[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'MouseEvent',
  'WheelEvent',
  'EventTarget',
  'WebGlBuffer',                  
  'WebGlContextAttributes',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'XmlHttpRequest',
  'XmlHttpRequestEventTarget',
  'XmlHttpRequestResponseType',
  'PerformanceTiming',
  'Performance',
  'CanvasRenderingContext2d',
  'TextMetrics',
  'ImageData',
  'Storage',
  'WebGlActiveInfo',
  'GpuRenderBundleEncoder'
]

[profile.dev]
opt-level = 's'
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = true