[package]
name = "al-core"
version = "0.1.0"
authors = ["baumannmatthieu0@gmail.com", "matthieu.baumann@astro.unistra.fr"]
edition = "2018"

[dependencies]
futures = "0.3.12"
js-sys = "0.3.47"
wasm-bindgen-futures = "0.4.20"
cgmath = "*"
fontdue = "0.6.2"
image = "0.23.14"

[dependencies.wasm-bindgen]
version = "0.2.70"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.47"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'MouseEvent',
  'WheelEvent',
  'EventTarget',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlContextAttributes',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'XmlHttpRequest',
  'XmlHttpRequestEventTarget',
  'XmlHttpRequestResponseType',
  'PerformanceTiming',
  'Performance',
  'CanvasRenderingContext2d',
  'TextMetrics',
  'ImageData',
  'Storage',
  'WebGlActiveInfo',
  'GpuRenderBundleEncoder'
]

[profile.dev]
lto = true
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
