[package]
name = "al-ui"
version = "0.1.0"
authors = ["baumannmatthieu0@gmail.com", "matthieu.baumann@astro.unistra.fr"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
futures = "0.3.12"
js-sys = "0.3.47"
wasm-bindgen-futures = "0.4.20"
cgmath = "*"
itertools-num = "0.1.3"
healpix = { package = "cdshealpix", git = 'https://github.com/cds-astro/cds-healpix-rust', branch = 'master' }
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "1.0"
serde_derive = "^1.0.59"
num = "*"
fitsrs = { package = "fitsrs", git = 'https://github.com/cds-astro/fitsrs', branch = 'master' }
num-traits = "0.2.14"
img_pixel = { package = "image", version = "0.23.14" }
egui = "*"
epi = "*"
egui_web = "*"
al-core = { path = "../al-core" }


[dependencies.wasm-bindgen]
version = "0.2.70"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.47"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'MouseEvent',
  'WheelEvent',
  'EventTarget',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlContextAttributes',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'XmlHttpRequest',
  'XmlHttpRequestEventTarget',
  'XmlHttpRequestResponseType',
  'PerformanceTiming',
  'Performance',
  'CanvasRenderingContext2d',
  'TextMetrics',
  'ImageData',
  'Storage',
  'WebGlActiveInfo',
  'GpuRenderBundleEncoder'
]

[profile.dev]
lto = true
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
