[package]
name = "aladinlite-derive"
version = "0.1.1"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[lib]
proc-macro = true
