[package]
name = "task-async-executor"
version = "0.1.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
futures-task = "0.3.5"

[dependencies.wasm-bindgen]
version = "0.2.63"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.40"
features = [
  'Document',
  'Window',
  'PerformanceTiming',
  'Performance',
]